Refactored the code to make the namespace consistent

--- a/InsightMainServer/InsightMainServer/App.config
+++ b/InsightMainServer/InsightMainServer/App.config
@@ -39,9 +39,9 @@
       <!-- <encoding value="unicodeFFFE" /> -->
 
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[ Start of SystemInfoServer Log ]
+        <header value="[ Start of InsightMainServer Log ]
 "/>
-        <footer value="[ End of SystemInfoServer Log ]
+        <footer value="[ End of InsightMainServer Log ]
 "/>
         <conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
       </layout>
