--- a/InsightMainServer/InsightMainServerService/InsightMainServerService.csproj
+++ b/InsightMainServer/InsightMainServerService/InsightMainServerService.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{856D3FB0-8074-4C67-BA04-E84E2498B96E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SystemInfoService</RootNamespace>
-    <AssemblyName>SystemInfoService</AssemblyName>
+    <RootNamespace>InsightMainServerService</RootNamespace>
+    <AssemblyName>InsightMainServerService</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
